# demo-scraping-service

./: NOTES.md  compose.yaml  package.json  pnpm-lock.yaml
axum-backend/: Cargo.toml
axum-backend/src/: main.rs  message.rs  state.rs
invoice-front/: package.json  pnpm-lock.yaml
invoice-front/app/: root.tsx  supabase.context.tsx  tailwind.css
invoice-front/app/components/: icons.tsx
invoice-front/app/lib/: supabase-server.ts
invoice-front/app/routes/: _index.tsx  _invoices._index.tsx  _invoices.invoices.$id.tsx  _invoices.tsx  invoices.$id.tsx  login.tsx
invoice-front/app/types/: invoice.ts
nest-backend/: README.md  compose.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
nest-backend/scripts/: query-with-search-term.sh  scrape.sh
nest-backend/src/: app.module.ts  auth.guard.ts  base-entity.ts  base-message.ts  logger.ts  main.ts  tracing.ts  types.d.ts  utils.ts
nest-backend/src/invoice/: block-storage.service.ts  invoice.controller.ts  invoice.module.ts  invoice.service.ts  mistralai.service.ts
nest-backend/src/scraping-task/: document.controller.ts  document.service.ts  scraping-task.controller.ts  (+2 more)
nest-backend/supabase/: config.toml
scripts/: query-with-pagination.sh
src/: app.module.ts  base-entity.ts  base-message.ts  main.ts
src/invoice/: invoice.controller.spec.ts  invoice.controller.ts  invoice.module.ts
src/scraping-task/: document.controller.ts  document.service.ts  scraping-task.controller.spec.ts  scraping-task.controller.ts  scraping-task.module.ts  scraping-task.service.spec.ts  scraping-task.service.ts
(+29 files in other folders)
