[package]
name = "axum-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
async-nats = "0.40.0"
axum = "0.8.3"
dotenvy = "0.15.7"
futures = "0.3.31"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "postgres", "uuid"] }
tokio = { version = "1.44.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
